	    connection when we want to make multiple queries
            but the upstream server accepts fewer queries per connection.
 
            Improve logging of upstream servers when there are a lot
	    of "local addresses only" entries. Thanks to Hannu Nyman for
	    the patch.

            Implement RFC 6842. Thanks to Reddeiah Raju Konduru for
            pointing out that this was missing.


version 2.76
            Include 0.0.0.0/8 in DNS rebind checks. This range 
	    translates to hosts on  the local network, or, at 
	    least, 0.0.0.0 accesses the local host, so could
	    be targets for DNS rebinding. See RFC 5735 section 3 
	    for details. Thanks to Stephen Röttger for the bug report.

	    Enhance --add-subnet to allow arbitrary subnet addresses.
            Thanks to Ed Barsley for the patch.

	    Respect the --no-resolv flag in inotify code. Fixes bug
	    which caused dnsmasq to fail to start if a resolv-file 
	    was a dangling symbolic link, even of --no-resolv set.
	    Thanks to Alexander Kurtz for spotting the problem.

	    Fix crash when an A or AAAA record is defined locally,
	    in a hosts file, and an upstream server sends a reply
	    that the same name is empty. Thanks to Edwin Török for
	    the patch.

	    Fix failure to correctly calculate cache-size when 
	    reading a hosts-file fails. Thanks to André Glüpker 
	    for the patch.

	    Fix wrong answer to simple name query when --domain-needed
	    set, but no upstream servers configured. Dnsmasq returned
	    REFUSED, in this case, when it should be the same as when
	    upstream servers are configured - NOERROR. Thanks to 
	    Allain Legacy for spotting the problem.

	    Return REFUSED when running out of forwarding table slots,
	    not SERVFAIL.

            Add --max-port configuration. Thanks to Hans Dedecker for
	    the patch.

	    Add --script-arp and two new functions for the dhcp-script.
	    These are "arp" and "arp-old" which announce the arrival and